Fix: Whitespace between player-online

--- a/next/styles.css
+++ b/next/styles.css
@@ -858,11 +858,10 @@ button,
     display: flex;
     gap: 16px;
     /* margin-left: 20px; */
-    /* padding-left: 20px; */
+    padding-left: 5px;
     position: relative;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
-    flex-grow: 1;
 }
 
 .player-stats::before {
